src/test/deca/syntax/parser/invalid/decl_var_wrong_equal_symbole_gt.deca
// Parser test, special character (=) replaced by a >

{
    int x > 5;
}